hphp/hack/test/typecheck/magic_methods/__clone.php.exp
File "__clone.php", line 12, characters 10-16:
`__clone` is a magic method and cannot be called directly (NastCheck[3011])
